# chloe

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  claude.md  cliff.toml  committed.toml  demo.tape  install.sh  rustfmt.toml
.beads/: issues.jsonl
.chloe/: settings.json
.chloe/events/: 3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837765537013000-eb48ce92-147d-4e3a-b8ac-e32a17224168.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837765924553000-a2334480-703a-4982-92e5-9bf01548a2b1.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837772939094000-586fa1f9-3c34-4cb2-b52d-31da851f28b7.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837777422562000-850209f5-3311-472d-bc33-65ce8c068b2a.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837780815149000-3f45dfb6-9a28-4fb8-8f5a-5ec81ecff1c8.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837785170864000-9e9139ae-4f3a-4ddf-8db0-c653d0779876.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837790729792000-d3395919-e116-48ba-a919-6af368be6610.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837794211952000-5d83f10b-5e08-47b4-ab16-c121df4499ad.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837797817597000-db0b1111-6223-4d03-a3f2-31cf083b4ac9.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837803542005000-a3438c6e-b385-46f4-b581-dca6fadd830f.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837807851321000-e4f3f6f0-4a06-4769-a7a9-8e775e114587.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837815477724000-994c9156-f798-4cf2-97e4-78d51dab5898.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837819305911000-d1036fda-050a-4a0d-936f-12fdccd2313d.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837823103852000-6377812f-1f32-4dfd-8d72-6b03cfc90e36.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837827366221000-9e57f23e-bce6-4083-9a6e-3738a7145013.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837831555399000-6b45d3ef-7f27-4949-a554-1ae57cb93224.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837840563574000-1f788d9d-1ca3-4d7e-8f52-e3227f45156a.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837844047789000-83a3384b-52b7-4be5-92ce-e977aa3950b6.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837850263558000-e200856d-e5c9-4bf5-8f4c-deefc4e7ad45.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767837881640821000-af73f021-e79b-47eb-a3b2-c0c7dc563567.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767838007474642000-c21e8c18-f69d-494a-96a9-39f458824016.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767838012144410000-e2645ff6-f285-420d-b7f3-fd588cddbc0b.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767838026791356000-23a2b9d0-950c-48ee-9822-27e48ea0a441.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767838031809712000-c45bf507-2d60-4457-bb0b-21a06edda149.json  3a9bf1c3-b8ff-4fe0-b880-8858ca74a2c4-1767838036749952000-dd665cb6-b243-4662-a52e-02439a864f93.json  (+38 more)
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  (+2 more)
.ralph-tui/: progress.md  session.json
docs/: architecture.md  biome.json  code-style.md  next-sitemap.config.js  next.config.ts  package.json  safety.md  session-management.md  tsconfig.json  vercel.json
src/: app.rs  cli.rs  event_loop.rs  events.rs  lib.rs  main.rs  polling.rs
(+340 files in other folders)
