[package]
name = "chloe"
version = "0.4.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
alacritty_terminal = "0.25"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
git2 = "0.20"
similar = "2.6"
regex = "1.11"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
undocumented_unsafe_blocks = "deny"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
